--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -17,128 +17,147 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button1"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
+        android:contentDescription="@string/button1"
+        android:tag="@android:string/yes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_first" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button2"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button2"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintStart_toEndOf="@+id/button1"
-        app:layout_constraintTop_toBottomOf="@+id/textview_first" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_first"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/button3"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button3"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_first" />
-    <Button
+
+    <ImageButton
         android:id="@+id/button4"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
+        android:contentDescription="@string/button4"
+        android:tag="@android:string/yes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button5"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button5"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toStartOf="@+id/button6"
         app:layout_constraintStart_toEndOf="@+id/button4"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button6"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button6"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
-    <Button
+
+    <ImageButton
         android:id="@+id/button7"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
+        android:contentDescription="@string/button7"
+        android:tag="@android:string/yes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button8"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button8"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toStartOf="@+id/button9"
         app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintTop_toBottomOf="@+id/button5" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button9"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button9"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
-    <Button
+
+    <ImageButton
         android:id="@+id/button10"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
+        android:contentDescription="@string/button10"
+        android:tag="@android:string/yes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button9" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button11"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button11"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toStartOf="@+id/button12"
         app:layout_constraintStart_toEndOf="@+id/button10"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button12"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/heart"
-        android:text=""
+        android:contentDescription="@string/button12"
+        android:tag="@android:string/yes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
