--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,13 @@
 
     <include layout="@layout/content_main" />
 
+    <Button
+        android:id="@+id/RestartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Restart"
+        android:layout_marginTop="665dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="20sp" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
